--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -798,6 +798,7 @@
         android:layout_marginEnd="318dp"
         android:layout_marginBottom="485dp"
         android:background="@null"
+        android:onClick="rulesPopupGame"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/questionmarkbutton" /><![CDATA[
 
